Made createReader/Writer methods generic so caller doesn't have to cast